// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> Default story renders snapshot 1`] = `
<div
  class="tabs"
>
  <div
    class="tabs__header"
  >
    <ul
      class="tabs__list"
      role="tablist"
    >
      <li
        class="tabs__item eds-is-active"
        role="presentation"
      >
        <a
          aria-controls="1uid1"
          aria-selected="true"
          class="tabs__link"
          href="#1uid1"
          id="1uid4"
          role="tab"
          tabindex="0"
        >
          Tab 1
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls="1uid2"
          aria-selected="false"
          class="tabs__link"
          href="#1uid2"
          id="1uid5"
          role="tab"
          tabindex="-1"
        >
          Tab 2
        </a>
      </li>
      <li
        class="tabs__item"
        role="presentation"
      >
        <a
          aria-controls="1uid3"
          aria-selected="false"
          class="tabs__link"
          href="#1uid3"
          id="1uid6"
          role="tab"
          tabindex="-1"
        >
          Tab 3
        </a>
      </li>
    </ul>
  </div>
  <div
    class="tabs__body"
  >
    <div
      aria-hidden="false"
      aria-labelledby="1uid4"
      class="tabs__panel"
      id="1uid1"
      role="tabpanel"
    >
      <div
        class="layout-linelength-container text text--body text-passage text-passage--body"
      >
        <h3>
          Tab 1
        </h3>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> Inverted story renders snapshot 1`] = `
<div
  style="background: black;"
>
  <div
    class="tabs tabs--inverted"
  >
    <div
      class="tabs__header"
    >
      <ul
        class="tabs__list"
        role="tablist"
      >
        <li
          class="tabs__item eds-is-active"
          role="presentation"
        >
          <a
            aria-controls="3uid7"
            aria-selected="true"
            class="tabs__link"
            href="#3uid7"
            id="3uid10"
            role="tab"
            tabindex="0"
          >
            Tab 1
          </a>
        </li>
        <li
          class="tabs__item"
          role="presentation"
        >
          <a
            aria-controls="3uid8"
            aria-selected="false"
            class="tabs__link"
            href="#3uid8"
            id="3uid11"
            role="tab"
            tabindex="-1"
          >
            Tab 2
          </a>
        </li>
        <li
          class="tabs__item"
          role="presentation"
        >
          <a
            aria-controls="3uid9"
            aria-selected="false"
            class="tabs__link"
            href="#3uid9"
            id="3uid12"
            role="tab"
            tabindex="-1"
          >
            Tab 3
          </a>
        </li>
      </ul>
    </div>
    <div
      class="tabs__body"
    >
      <div
        aria-hidden="false"
        aria-labelledby="3uid10"
        class="tabs__panel"
        id="3uid7"
        role="tabpanel"
      >
        <div
          class="layout-linelength-container text text--body text-passage text-passage--body"
        >
          <h3>
            Tab 1
          </h3>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
